# mani_ws

./: README.md
leader_follower/: CMakeLists.txt  package.xml
leader_follower/config/: leader_controllers.yaml
leader_follower/launch/: follower.launch.py  leader.launch.py
leaderarm_description/: package.xml  setup.cfg  setup.py
leaderarm_description/config/: display.rviz
leaderarm_description/launch/: display.launch.py  gazebo.launch.py
leaderarm_description/meshes/: base_link.stl  gripper_leader_1.stl  link_1_leader_1.stl  link_2_leader_1.stl  link_3_leader_1.stl  link_4_leader_1.stl  link_5_leader_1.stl  trigger_leader_1.stl
leaderarm_description/urdf/: leaderarm.gazebo  leaderarm.trans  leaderarm.xacro  materials.xacro
robot_bringup/: package.xml  setup.py
robot_bringup/config/: controller_manager.yaml  eclipse.rviz
robot_bringup/launch/: bringup.launch.py
robot_description/: CMakeLists.txt  package.xml
robot_description/config/: eclipse.rviz
robot_description/launch/: display.launch.py
robot_description/meshes/eclipse_arm/: link1_1.stl  link2_1.stl  link3_1.stl  link4_1.stl  link5_1.stl  mani_base_link.stl
robot_description/meshes/eclipse_base/: base2main_link_1.stl  flipper_bl_link_1.stl  flipper_br_link_1.stl  flipper_fl_link_1.stl  flipper_fr_link_1.stl
robot_description/meshes/eclipse_gripper/: gripper_base_link.stl  gripper_hand_llink_1.stl  gripper_hand_rlink_1.stl  (+4 more)
robot_description/ros2_control/: eclipse_ros2_control.xacro
robot_description/urdf/: eclipse.xacro  eclipse_arm.xacro  eclipse_base.xacro  eclipse_gripper.xacro
